kubernetes/production/homeassistant/mdns-publisher.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdns-publisher
  namespace: homeassistant
  labels:
    app: mdns-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdns-publisher
  template:
    metadata:
      labels:
        app: mdns-publisher
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: mdns-publisher
        image: python:3.12-alpine
        command:
          - python3
          - -c
          - |
            [...]
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 200m
